ingress-rules/public-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-root-landing-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: "/http"
    rewrite:
      uri: " "
    headers:
        request:
          set:
            x-username: 
              '%DYNAMIC_METADATA(["istio_authn", "request.auth.principals", "sub"])%'
    route:
    - destination:
        port:
          number: 80
        host: httpbin
  - match:
    - uri:
        prefix: "/user"
    rewrite:
      uri: " "
    route:
    - destination:
        port:
          number: 80
        host: token-eas-service
